[package]
name = "what3words"
description = "what3words API wrapper for rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://developer.what3words.com"
readme = "README.md"
repository = "https://github.com/what3words/w3w-rust-wrapper.git"

[dependencies]
futures = "0.3.31"
http = "1.1.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[example]]
name = "wrapper-demo"
path = "examples/service.rs"

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }